# actix-app-api

./: rust-toolchain.toml
crates/srv-api/: Cargo.toml
crates/srv-api/src/: lib.rs
crates/srv-storage/: Cargo.toml
crates/srv-tracing/: Cargo.toml
crates/srv-tracing/src/: lib.rs
