[package]
name = "srv-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
# opentelemetry = { workspace = true }
# opentelemetry-jaeger = { workspace = true }

opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0", default-features = false, features = [
	"trace",
] }
opentelemetry-http = { version = "0.30.0" }
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.30.0", features = [
	"semconv_experimental",
] }

tracing-opentelemetry = { version = "0.31.0" }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"
tracing-journald = "0.3"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.8"
tracing-error = "0.2.0"

tokio = { version = "1.45.1", features = ["full"] }
